2013-08-27  Andreas Schwab  <schwab@suse.de>

	* sysdeps/i386/i686/multiarch/strcmp-sse4.S (__strcasecmp_sse4_2)
	(__strncasecmp_sse4_2) [PIC]: Restore %ebx before falling through
	to __strcasecmp_nonascii and __strncasecmp_nonascii.
	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S (__strcasecmp_ssse3)
	(__strncasecmp_ssse3) [PIC]: Likewise.

2013-08-26  Roland McGrath  <roland@hack.frob.com>

	* io/lxstat64.c: Just call __xstat64, for parity with stub __lxstat.

	* nss/nss_files/files-key.c: Include <rpc/des_crypt.h>
	instead of explicitly declaring xdecrypt.
	* nis/nss_nis/nis-publickey.c: Likewise.

2013-08-26  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #15890]
	* nscd/aicache.c: Include res_hconf.h.
	(addhstaiX): Initialize res_hconf.

2013-08-26  Andreas Schwab  <schwab@suse.de>

	* stdlib/Makefile (LDFLAGS-tst-tls-atexit): Remove.
	($(objpfx)tst-tls-atexit): Add dependencies here instead.

2013-08-26  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* nscd/aicache.c (addhstaiX): Fix indentation.

2013-08-25  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac: Quote $build_pt_chown test.
	* configure: Regenerated.

2013-08-23  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15532]
	* math/s_cexp.c (__cexp): Return NaN + i0 for NaN + i0 argument.
	* math/s_cexpf.c (__cexpf): Likewise.
	* math/s_cexpl.c (__cexpl): Likewise.
	* math/libm-test.inc (cexp_test_data): Correct expected return
	value for NaN + i0.  Add another test.

2013-08-22  David S. Miller  <davem@davemloft.net>

	* po/ca.po: Update Catalan translation from translation project.
	* po/uk.po: Add Ukrainian translations from translation project.

2013-08-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15797]
	* math/s_fdim.c (__fdim): Check for infinite arguments if result
	is infinite, not alongside NaN test.
	* math/s_fdimf.c (__fdimf): Likewise.
	* math/s_fdiml.c (__fdiml): Likewise.
	* math/libm-test.inc (fdim_test_data): Add more tests.  Test that
	errno is unchanged.
